@@ -226,7 +226,6 @@
 <MODE NAME="gsp"			FILE="jsp.xml"
         FILE_NAME_GLOB="*.{gsp}" />
 
-
 <MODE NAME="haskell"		FILE="haskell.xml"
         FILE_NAME_GLOB="*.hs" />
 
@@ -419,6 +418,9 @@
 
 <MODE NAME="omnimark"		FILE="omnimark.xml"
         FILE_NAME_GLOB="*.x{om,in}" />
+
+<MODE NAME="opensips"		FILE="opensips.xml"
+        FILE_NAME_GLOB="opensips.cfg" />
 
 <MODE NAME="outline"		FILE="outline.xml"
         FILE_NAME_GLOB="*.{outline}" />
